--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "material-ui": "^0.19.0",
+    "material-ui-pagination": "^1.1.3",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-js-pagination": "^2.2.0"
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.12"
