--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-ui-pagination": "^1.1.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
